Migrate to micronaut from java-spark